--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,13 +26,6 @@ h2 {
   font-family: 'Nanum Myeongjo', serif;
 }
 
-.titles {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-bottom: 5rem;
-}
-
 h1, h2, h3 { 
   user-select: none;
 }
@@ -49,24 +42,66 @@ h3 {
   font-family: 'Nanum Myeongjo', serif;
 }
 
-header {
+div.titles {
   position: absolute;
   display: flex;
   flex-direction: column;
+  align-items: center;
   top: 1rem;
-  left: 40%;
+  left: 45%;
+  margin: 0;
 }
 
 #timer-panel {
   position: absolute;
   display: flex;
   flex-direction: column;
-  top: 2rem;
-  right: 2rem;
-  background-color: RGBa(255,255,255, 0.8);
   align-items: center;
+  top: 1rem;
+  right: 1rem;
+  background-color: RGBa(255,255,255, 0.8);
   padding: 0.5rem;
+  margin: 0.2rem;
   border-radius: 0.8rem;
+}
+
+#boards-game {
+  background-color: RGBa(255,255,255, 0.5);
+  position: absolute;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  min-width: 85%;
+  min-height: 80%;
+  width: fit-content;
+  height: fit-content;
+  top: 10rem;
+  bottom: 0.5rem;
+  left: 12rem;
+  border-radius: 1rem;
+  padding: 0.5rem;
+}
+
+#boards-game .card {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#start {
+  padding: 2rem 5rem;
+  border-radius: 1rem;
+  border: 1px solid black;
+  box-shadow: 5px 5px 5px rgb(81, 76, 76);
+  font-size: 1rem;
+}
+
+section {
+  position: absolute;
+  left : 0.2rem;
+  padding: 0.2rem;
+  text-align: center;
 }
 
 img {
@@ -74,13 +109,6 @@ img {
   margin: 0.2rem;
   border: 1px solid whitesmoke;
   user-select: none;
-}
-
-section {
-  position: absolute;
-  left : 0.2rem;
-  padding: 0.2rem;
-  text-align: center;;
 }
 
 #game-themes div {
@@ -108,38 +136,6 @@ section {
 
 #pick-theme.selected {
   background-color: white;
-}
-
-#boards-game {
-  background-color: RGBa(255,255,255, 0.5);
-  position: absolute;
-  top: 10rem;
-  bottom: 0.5rem;
-  left: 12rem;
-  min-height: 80%;
-  min-width: 85%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-  border-radius: 1rem;
-  padding: 0.5rem;
-  box-sizing: border-box;
-}
-
-#boards-game .card {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
-#start {
-  padding: 2rem 5rem;
-  border-radius: 1rem;
-  border: 1px solid black;
-  box-shadow: 5px 5px 5px rgb(81, 76, 76);
-  font-size: 1rem;
 }
 
 #kr {
@@ -190,4 +186,22 @@ section {
   transform: rotateY(-180deg) translateZ(1px);
   backface-visibility: hidden;
   border-radius: 1rem;
+}
+
+dialog{
+  margin: auto;
+  text-align: center;
+  padding: 2rem 5rem;
+  border-radius: 3.5rem;
+  border: none;
+}
+
+dialog button {
+  border-radius: 2rem;
+  margin: 0.5rem;
+  padding: 0.3rem;
+}
+
+dialog::backdrop {
+  backdrop-filter: blur(5px);
 }
